exports[`<Tooltip /> renders correctly when hidden 1`] = `
<div
  className="container">
  <Motion
    defaultStyle={
      Object {
        "opacity": 0,
        "rotateX": -40,
        "y": 8
      }
    }
    style={
      Object {
        "opacity": Object {
          "damping": 26,
          "precision": 0.01,
          "stiffness": 170,
          "val": 0
        },
        "rotateX": Object {
          "damping": 26,
          "precision": 0.01,
          "stiffness": 170,
          "val": -40
        },
        "y": Object {
          "damping": 26,
          "precision": 0.01,
          "stiffness": 170,
          "val": 8
        }
      }
    } />
</div>
`;

exports[`<Tooltip /> renders correctly when shown 1`] = `
<div
  className="container show">
  <Motion
    defaultStyle={
      Object {
        "opacity": 0,
        "rotateX": -40,
        "y": 8
      }
    }
    style={
      Object {
        "opacity": Object {
          "damping": 26,
          "precision": 0.01,
          "stiffness": 170,
          "val": 0.9
        },
        "rotateX": Object {
          "damping": 26,
          "precision": 0.01,
          "stiffness": 170,
          "val": 0
        },
        "y": Object {
          "damping": 26,
          "precision": 0.01,
          "stiffness": 170,
          "val": 0
        }
      }
    } />
</div>
`;
